syntax = "proto3";

option java_package = "com.hoonjin.study.spring.grpc.server";
option java_outer_classname = "UserProto";

package user;

service UserService {
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUsersStream(GetUsersRequest) returns (stream UserResponse);
}

message GetUserRequest {
  int64 id = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message GetUsersRequest {
  int32 page = 1;
  int32 size = 2;
}

message UserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string created_at = 4;
}
